# i2ros_ex

./: README.md
exercise_2/: Clients_e2_solution.cpp  Clients_e3_solution.cpp  Clients_e3_template.cpp  SupeROS_e1_solution.cpp  SupeROS_e1_template.cpp  clients_e2_template.cpp
exercise_2/catkin_ws/src/customers/: CMakeLists.txt  package.xml
exercise_2/catkin_ws/src/customers/launch/: start.launch
exercise_2/catkin_ws/src/customers/src/: Clients_e3.cpp  clients_e2.cpp
exercise_2/catkin_ws/src/superos/: CMakeLists.txt  package.xml
exercise_2/catkin_ws/src/superos/src/: SupeROS_e1.cpp
exercise_3/solutions/exericise_r2d2_ws/src/mission_r2d2/: CMakeLists.txt  package.xml
exercise_3/solutions/exericise_r2d2_ws/src/mission_r2d2/src/: mission_r2d2.cpp
exercise_3/solutions/exericise_r2d2_ws/src/mission_r2d2/urdf/: lost_object.urdf
exercise_3/solutions/exericise_r2d2_ws/src/urdf_sim_tutorial/: CMakeLists.txt  package.xml
exercise_3/solutions/exericise_r2d2_ws/src/urdf_sim_tutorial/config/: diffdrive.yaml  gripper.yaml  head.yaml
exercise_3/templates/exericise_r2d2_ws/src/mission_r2d2/launch/: r2d2_and_lostObject.launch
exercise_3/templates/exericise_r2d2_ws/src/mission_r2d2/src/: lost_object.cpp  mission_r2d2.cpp
